# Unit-Converter

./: .gitignore  CLAUDE.md  Magnitudes.txt  README.md  SPECIFICATIONS-archive-20260625.md  SPECIFICATIONS.md  UConverter_UI.py  UConverter_UI.pyw  pyproject.toml
.claude/: settings.json
.claude/agents/: access-dev.md  core-dev.md  docs-writer.md  gui-dev.md  orchestrator.md  packaging-builder.md  reviewer.md  test-author.md  unit-conversion-operator.md  unit-converter-maintainer.md
.claude/hooks/: coverage_gate_reminder.py  headless_core_guard.py  no_secrets_or_artifacts.py  tkinter_regression_guard.py
.claude/instructions/: ai-execution-discipline.md  pyside6-best-practices.md  python-repo-conventions.md  sdd-constitution.md
.claude/skills/add-unit-or-magnitude/: SKILL.md
.claude/skills/analyze/: SKILL.md
.claude/skills/build-release/: SKILL.md
.claude/skills/build-release/scripts/: build_release.py
.claude/skills/checklist/: SKILL.md
.claude/skills/clarify/: SKILL.md
.claude/skills/expose-op/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/run-quality-gate/: SKILL.md
.claude/skills/run-quality-gate/scripts/: quality_gate.py
.claude/skills/specify/: SKILL.md
.claude/skills/tasks/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: BACKLOG.md  agent-access.md  agent-operating-doc.md  dependency-analysis.md  reference-widget-popup.md  research-pyside6-best-practices.md  usage-guide.md
packaging/: README-packaging.md  UConverter.spec  build.py  build_posix.sh  build_windows.bat
packaging/scripts/: png_to_ico.py
tests/: test_api_routes.py  test_api_smoke.py  test_converter.py  test_data_loader.py  test_description.py  test_expr.py  test_gui_batch.py  test_gui_clipboard.py  test_gui_format_result.py  test_gui_geometry.py  test_gui_history_menu.py  test_gui_locale_format.py  test_gui_theme_persist.py  test_gui_unit_search.py  test_history.py  test_info_registry.py  test_rates.py  test_service_validation.py
unit_converter/: __init__.py
unit_converter/api/: README-access.md  __init__.py  main.py  mcp_server.py  rest.py  service.py
unit_converter/core/: __init__.py  converter.py  data_loader.py  expr.py  history.py  rates.py
unit_converter/data/: Magnitudes.txt  README.md  __init__.py  currency_snapshot.json  magnitudes.toml
unit_converter/gui/: __init__.py  app.py  batch.py  clipboard.py  description.py  format_result.py  geometry.py  history_menu.py  info_registry.py  locale_format.py  main_window.py  resources.py  theme.py  theme_persist.py  unit_search.py
