[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unit-converter"
version = "1.1.0"
description = "Multi-magnitude unit converter with a pure Python core and optional GUI/API front-ends."
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Juan Garcia Sanchez" }]

# Python floor: 3.11 required for stdlib tomllib (tomllib was added in 3.11).
# Python ceiling note: FastMCP 3.4.x declares support through Python 3.13 only;
# the rest of the stack (PySide6, FastAPI, uvicorn, PyInstaller) supports 3.14.
# CI/build target: Python 3.13 until FastMCP publishes a 3.14 classifier.
requires-python = ">=3.11"

# Runtime core dependencies — the pure core has no third-party runtime deps.
# NumPy is intentionally NOT listed: np.round/np.inf usage has been replaced
# with stdlib round()/math.inf, eliminating the only third-party runtime dep
# from the core package.
dependencies = []

[project.optional-dependencies]
# GUI front-end (PySide6)
gui = [
    "PySide6~=6.11.1",
]

# Access-layer / server front-end (REST + MCP over the pure core)
# FastMCP >= 3.4, < 4 provides the single-app dual-exposure pattern via
# FastMCP.from_fastapi() + mcp.http_app().  SSE is deprecated; use
# Streamable HTTP (the default in FastMCP 3.x).
api = [
    "fastmcp>=3.4,<4",
    "fastapi>=0.136,<1",
    "uvicorn>=0.49,<1",
]

# Development / testing / packaging tools
dev = [
    "pytest~=9.0.3",
    "pytest-cov~=7.1.0",
    "pyinstaller~=6.20.0",
]

[project.scripts]
# Primary PySide6 GUI entry point (requires the [gui] optional dependency group).
unit-converter-gui = "unit_converter.gui.app:main"

# Access-layer entry points (require the [api] optional dependency group).
# Starts the combined REST + MCP server (uvicorn on 127.0.0.1:8000 by default; pass --host 0.0.0.0 for LAN).
unit-converter-api = "unit_converter.api.main:run_server"
# Runs the MCP server over stdio (for CLI / local agent clients).
unit-converter-mcp = "unit_converter.api.mcp_server:run_stdio"

[tool.setuptools.packages.find]
where = ["."]
include = ["unit_converter*"]

[tool.setuptools.package-data]
"unit_converter.data" = ["magnitudes.toml", "Magnitudes.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov-fail-under=90"

[tool.coverage.run]
source = ["unit_converter"]
omit = [
    # Exclude GUI, API transport/server, and entry-point files from the core coverage gate.
    # Only unit_converter/core/ is subject to the >=90% line coverage requirement.
    # The access-layer smoke tests (testing workstream) cover the api/ surface separately.
    "unit_converter/data/*",
    "unit_converter/gui/*",
    "unit_converter/api/*",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
